<resources>
    <string name="app_name">双控平台</string>
    <string name="welcome_title">风险分级管控与隐患排查治理系统</string>
    <string name="click_agin">再按一次退出应用</string>
    <string name="network_connection_failed">请检查网络...</string>
    <string name="loading_write">请稍后...</string>
    <string name="NotEmpty">账号或者密码不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="submit_success">提交成功</string>
    <string name="mine_cancellation_dialog_title">注销</string>
    <string name="mine_cancellation_dialog_content">请问是否要注销此账号</string>
    <string name="mine_cancellation_dialog_btn1">取消</string>
    <string name="mine_cancellation_dialog_btn2">确定</string>
    <string name="permission_err">拒绝权限会导致某些功能不可用。</string>
    <string name="network_error">连接失败</string>
    <string name="loading">加载中...</string>
    <string name="refreshed">刷新完成</string>
    <string name="netcantuse">网络不可用</string>
    <string name="HintText">请输入关键词...</string>
    <string name="CameraErr">拍照失败，需要开启相机权限</string>
    <string name="PleaseWriteAccount">请填写账号</string>
    <string name="PleaseWritePwd">请填写密码</string>
    <string name="loadSuccess">加载完成</string>
    <string name="refreshSuccess">刷新完成</string>
    <string name="input_search">请输入关键字搜索</string>
    <string name="connect_err">连接失败，请检查网络</string>
    <string name="nosdcard">没有找到SD卡</string>
    <string name="getPermissionErr">获取权限失败</string>
    <string name="oldpwdEmpty">请填写原始密码</string>
    <string name="newpwdEmpty">请填写新密码</string>
    <string name="samenewpwd">两次填写的新密码不一致</string>
    <string name="oldpwd_err">原始密码不正确</string>
    <string name="sameOldNew">新密码不能与原密码相同</string>
    <string name="hiddenPwd">隐藏密码</string>
    <string name="displayPwd">显示密码</string>
    <string name="getMessageErr">获取消息数量失败</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="changepwd">修改密码</string>
    <string name="location_loading">获取定位中...</string>
    <string name="update">版本检查</string>
    <string name="bbh">版本号</string>
    <string name="signout">注销</string>
    <string name="home_title">首页</string>
    <string name="enterprisedetail_title">企业详情</string>
    <string name="noticedetail_title">通知公告详情</string>
    <string name="laws_title">法规政策</string>
    <string name="lawsdetail_title">法规政策详情</string>
    <string name="risk_title">企业地图</string>
    <string name="hidden_title">隐患监管</string>
    <string name="yb_hidden">一般隐患监管</string>
    <string name="zd_hidden">重大隐患监管</string>
    <string name="yb_hidden_zl">一般隐患治理</string>
    <string name="zd_hidden_zl">重大隐患治理</string>
    <string name="yb_hidden_check">一般隐患查看</string>
    <string name="zd_hidden_check">重大隐患查看</string>
    <string name="all_hidden_check">所有隐患查看</string>
    <string name="getInfoErr">获取数据失败，请重试</string>
    <string name="nodata">暂无数据</string>
    <string name="seemap">查看地图</string>
    <string name="qyadress">企业地理位置</string>
    <string name="qyname">企业名称</string>
    <string name="EstablishmentTime">成立时间</string>
    <string name="LegalRepresentative">法定代表</string>
    <string name="DocumentCode">证件代码</string>
    <string name="EconomicType">经济类型</string>
    <string name="MajorIndustryAreas">行业领域</string>
    <string name="CompetentDepartment">主管部门</string>
    <string name="NumberOfEmployees">员工人数</string>
    <string name="RegisteredCapital">注册资金</string>
    <string name="mEnterpriseAddress">企业地址</string>
    <string name="RiskLevel">风险级别</string>
    <string name="Qypf">企业评分</string>
    <string name="aqscxxgl">安全生产信息管理</string>
    <string name="yjjyxxcx">企业应急救援信息查询</string>
    <string name="bmgl">部门管理</string>
    <string name="qyzz">企业证照</string>
    <string name="rygl">人员管理</string>
    <string name="aqtr">安全投入</string>
    <string name="Wxy">危险源</string>
    <string name="zyws">职业卫生</string>
    <string name="aqjc">安全检查</string>
    <string name="Yhxx">隐患信息</string>
    <string name="Aqscxx">安全生产信息</string>
    <string name="Gzzd">安全制度</string>
    <string name="xzzf">行政执法</string>
    <string name="yjyl">应急演练</string>
    <string name="aqpx">安全培训</string>
    <string name="DataReportTitle">数据统计</string>
    <string name="ReportLittleTitle1">企业运行统计</string>
    <string name="ReportZd1">企业用户</string>
    <string name="ReportZd2">待审核企业</string>
    <string name="ReportTjRq">统计日期</string>
    <string name="ReportLittleTitle2">本月隐患登记处理情况统计</string>
    <string name="ReportZd3">本月上报重大隐患</string>
    <string name="ReportZddsh">等待审核的重大隐患</string>
    <string name="ReportZdwzg">未整改完成的重大隐患</string>
    <string name="ReportZd33">本月上报一般隐患</string>
    <string name="ReportZd4">整改日期到期的一般隐患</string>
    <string name="ReportZd44">未整改完成的一般隐患</string>
    <string name="ReportZd5">等待审核的隐患</string>
    <string name="ReportZd6">本月未上报企业</string>
    <string name="ReportZd7">未整改完成隐患</string>
    <string name="ReportLittleTitle3">本年隐患登记处理情况统计</string>
    <string name="ReportZd8">本年度共排查隐患</string>
    <string name="ReportZdPcYbyh">本年度共排查一般隐患</string>
    <string name="ReportZdYzgYbyh">其中已整改一般隐患</string>
    <string name="ReportZdWzgYbyh">其中未整改一般隐患</string>
    <string name="ReportZdPcZdyh">本年度共排查重大隐患</string>
    <string name="ReportZdYzgZdyh">其中已整改重大隐患</string>
    <string name="ReportZdWzgZdyh">其中未整改重大隐患</string>
    <string name="ReportZd9">共排查隐患</string>
    <string name="ReportZd10">其中已整改</string>
    <string name="ReportZd11">其中未整改</string>
    <string name="ReportZd12">整改率</string>
    <string name="Dwjia">家</string>
    <string name="Dwtiao">条</string>
    <string name="HiddenName">隐患名称</string>
    <string name="PersonLiable">整改责任人</string>
    <string name="ClassificationOfHiddenDangers">隐患类型分类</string>
    <string name="rectification_type">整改类型</string>
    <string name="InvestigationDate">排查日期</string>
    <string name="GovernanceDeadline">治理截止日期</string>
    <string name="SpecificLocationOfHiddenDanger">隐患具体位置</string>
    <string name="HiddenDescription">隐患描述</string>
    <string name="YsZj">验收专家及人员</string>
    <string name="YsDate">现场验收时间</string>
    <string name="YsAddress">验收地址</string>
    <string name="YsSituation">验收情况</string>
    <string name="PleaseInputYsZj">请输入验收专家及人员</string>
    <string name="PleaseInputYsDate">请输入现场验收时间</string>
    <string name="PleaseInputYsAddress">请输入验收地址</string>
    <string name="PleaseInputYsSituation">请输入验收情况</string>
    <string name="hidden_titlename">隐患管理</string>
    <string name="hidden_rectification">隐患整改信息</string>
    <string name="hidden_check">隐患验收管理</string>
    <string name="hidden_info">隐患基本信息</string>
    <string name="hidden_detail">隐患整改详情</string>
    <string name="hidden_flow">隐患整改流程</string>
    <string name="hidden_case">隐患销案管理</string>
    <string name="hidden_government">重大隐患排查治理</string>
    <string name="yhjbxx">隐患基本信息</string>
    <string name="jgzrdw">监管责任单位</string>
    <string name="input_jgzrdw">请输入监管责任单位</string>
    <string name="zgwcrq">整改完成日期</string>
    <string name="hcdw">核查单位</string>
    <string name="input_hcdw">请输入核查单位</string>
    <string name="sfgpdb">是否挂牌督办</string>
    <string name="gpdbjb">挂牌督办级别</string>
    <string name="input_gpdbjb">请输入挂牌督办级别</string>
    <string name="gpdbdw">挂牌督办单位</string>
    <string name="input_gpdbdw">请输入挂牌督办单位</string>
    <string name="zlmbrw">治理目标任务</string>
    <string name="input_zlmbrw">请输入治理目标任务</string>
    <string name="jfwzls">经费物资落实</string>
    <string name="input_jfwzls">请输入经费和物资的落实情况</string>
    <string name="jgzrr">监管责任人</string>
    <string name="input_jgzrr">请输入监管责任人</string>
    <string name="hcrq">核查日期</string>
    <string name="hcqk">核查情况</string>
    <string name="input_hcqk">请输入核查情况</string>
    <string name="gpdbwh">挂牌督办文号</string>
    <string name="input_gpdbwh">请输入挂牌督办文号</string>
    <string name="gpdbsj">挂牌督办时间</string>
    <string name="cqdffhcs">采取的方法和措施</string>
    <string name="input_cqdffhcs">请输入采取的方法和措施</string>
    <string name="zlyq">治理要求</string>
    <string name="input_zlyq">请输入治理要求</string>
    <string name="fsdw">发送单位</string>
    <string name="tzdbh">通知单编号</string>
    <string name="input_tzdwbh">请输入通知单位编号</string>
    <string name="zgdwzrr">整改单位责任人</string>
    <string name="input_zgdwzrr">请输入整改单位责任人</string>
    <string name="zgqx">整改期限</string>
    <string name="djsj">登记时间</string>
    <string name="zgdw">整改单位</string>
    <string name="input_zgdw">请输入整改单位</string>
    <string name="zgzzr">整改责任人</string>
    <string name="input_zgzrr">请填写整改责任人</string>
    <string name="zgqk">整改情况</string>
    <string name="input_zgqk">请输入整改情况</string>
    <string name="yszrdw">验收责任单位</string>
    <string name="input_yszrdw">请输入验收责任单位</string>
    <string name="zglx">整改类型</string>
    <string name="input_zglx">请输入整改类型</string>
    <string name="xadw">销案单位</string>
    <string name="input_xadw">请输入销案单位</string>
    <string name="zgcs">整改措施</string>
    <string name="input_zgcs">请输入整改措施</string>
    <string name="fxyhdw">发现隐患单位(部门)</string>
    <string name="input_fxyhdw">请输入发现隐患单位</string>
    <string name="yhbh">隐患编号</string>
    <string name="input_yhbh">请输入隐患编号</string>
    <string name="yhmc">隐患名称</string>
    <string name="input_yhmc">请输入隐患名称</string>
    <string name="yhczdw">隐患存在单位</string>
    <string name="input_yhczdw">请输入隐患存在单位</string>
    <string name="fxsgyhrq">发现事故隐患日期</string>
    <string name="input_fxsgyhrq">请输入发现事故隐患日期</string>
    <string name="djyhsj">登记隐患时间</string>
    <string name="input_djyhsj">请输入登记隐患时间</string>
    <string name="sgyhfxr">事故隐患发现人</string>
    <string name="input_sgyhfxr">请输入事故隐患发现人</string>
    <string name="sgyhxxtbr">事故隐患信息填报人</string>
    <string name="input_sgyhxxtbr">请输入事故隐患信息填报人</string>
    <string name="yhjb">隐患级别</string>
    <string name="sgyhdly">事故隐患的来源</string>
    <string name="yhlx">隐患类型</string>
    <string name="yhlb">隐患类别</string>
    <string name="yhzt">隐患状态</string>
    <string name="sgknzcdhg">事故可能造成的后果</string>
    <string name="yhzp">隐患照片</string>
    <string name="wczghzp">完成整改后照片</string>
    <string name="fxsgyhdxxdd">发现事故隐患的详细地点</string>
    <string name="input_fxsgyhdxxdd">请输入发现事故隐患的详细地点</string>
    <string name="fxsgyhxxbw">发现事故隐患详细部位</string>
    <string name="input_fxsgyhxxbw">请输入发现事故隐患详细部位</string>
    <string name="dsgyhdxxxxjxdms">对事故隐患的详细信息进行的描述</string>
    <string name="input_dsgyhdxxxxjxdms">请输入对事故隐患的详细信息进行的描述</string>
    <string name="dccs">对策措施</string>
    <string name="input_dccs">请输入对策措施</string>
    <string name="yhjbqkjlnr">隐患交办情况记录内容</string>
    <string name="input_yhjbqkjlnr">请输入隐患交办情况记录内容</string>
    <string name="sfwcyhzg">是否完成隐患整改</string>
    <string name="czzt">操作状态</string>
    <string name="zdzgdw">指定整改单位</string>
    <string name="input_zdzgdw">请输入指定整改单位</string>
    <string name="MyAccidentPresentation">事故快报</string>
    <string name="MyPublisher">发布人:</string>
    <string name="MyReleaseTime">发布时间:</string>
    <string name="SearchViewAccidentPresentation">请输入事故名称或发布人</string>
    <string name="AccidentDetailsTitle">事故详情</string>
    <string name="deptname">事故单位</string>
    <string name="aititle">事故名称</string>
    <string name="aldate">事故日期</string>
    <string name="aitypename">事故分类</string>
    <string name="ailevelname">事故等级</string>
    <string name="swnum">死亡人数</string>
    <string name="zsnum">重伤人数</string>
    <string name="qsnum">轻伤人数</string>
    <string name="procid">事故ID</string>
    <string name="sbr">上报人</string>
    <string name="sznum">失踪人口</string>
    <string name="areaname">事故地区</string>
    <string name="AddAccidentPresentationTitle">事故填报</string>
    <string name="hintdeptname">请选择事故单位</string>
    <string name="hintaititle">请输入事故名称</string>
    <string name="hintswnum">请输入死亡人数</string>
    <string name="hintzsnum">请输入重伤人数</string>
    <string name="hintqsnum">请输入轻伤人数</string>
    <string name="hintsznum">请输入失踪人数</string>
    <string name="hintsgdq">请输入事故地区</string>
    <string name="hintsbr">请输入上报人</string>
    <string name="hintsgxq">请输入事故详情</string>
    <string name="write_success">提交成功</string>
    <string name="write_fail">提交失败</string>
</resources>