<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/x5">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zdzgdw" />

        <EditText
            android:id="@+id/etv_zdzgdw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/editext_bk"
            android:hint="@string/input_zdzgdw"
            android:inputType="text"
            android:padding="@dimen/x5"
            android:text=""
            android:textSize="@dimen/hint_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zgzzr" />

        <EditText
            android:id="@+id/etv_zgzrr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/editext_bk"
            android:hint="@string/input_zgzrr"
            android:inputType="text"
            android:padding="@dimen/x5"
            android:text=""
            android:textSize="@dimen/hint_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zgqx" />

        <TextView
            android:id="@+id/tv_zgqx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/editext_bk"
            android:drawableRight="@drawable/mdate"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/x5"
            android:text="" />
    </LinearLayout>


    <Button
        android:id="@+id/assign_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:background="@drawable/login_btn_style"
        android:text="提交指派"
        android:onClick="assignBtn"
        android:textColor="@color/white" />

</LinearLayout>
